fixed alignment

--- a/styles/list.css
+++ b/styles/list.css
@@ -284,6 +284,7 @@
   display: grid;
   gap: 1.5rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  align-content: start;
 }
 
 .events .list > .items > .item {
